--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -525,6 +525,9 @@
                                                     <rect key="frame" x="242" y="83" width="97" height="31"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" title="Add to cart"/>
+                                                    <connections>
+                                                        <action selector="addToCartBTN:" destination="xMg-Zs-tH9" eventType="touchUpInside" id="rJD-Pg-lPw"/>
+                                                    </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xw1-Mm-s7c">
                                                     <rect key="frame" x="213" y="21" width="151" height="35"/>
@@ -1824,6 +1827,9 @@
                                                             <integer key="value" value="15"/>
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="addToCartBtn:" destination="Eeb-o5-9lX" eventType="touchUpInside" id="BNM-5S-Z7i"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -2734,8 +2740,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="CQc-dh-lYr"/>
-        <segue reference="qGV-n2-CNY"/>
+        <segue reference="B98-DF-ffV"/>
+        <segue reference="vSV-Am-SNj"/>
         <segue reference="3zH-gj-nru"/>
         <segue reference="2Qn-92-HxQ"/>
         <segue reference="6ei-Hb-nWL"/>
