--- a/admin/admin.storyboard
+++ b/admin/admin.storyboard
@@ -30,7 +30,7 @@
                                     <constraint firstAttribute="width" constant="200" id="1Th-La-bAH"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sln-ae-aKa">
                                 <rect key="frame" x="20" y="238" width="100" height="30"/>
