--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -896,7 +896,7 @@
                                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="120" translatesAutoresizingMaskIntoConstraints="NO" id="ret-1f-0j5">
                                                         <rect key="frame" x="0.0" y="556" width="305" height="100"/>
                                                         <subviews>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.artframe" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="f1Z-kC-O8k">
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="f1Z-kC-O8k">
                                                                 <rect key="frame" x="0.0" y="1" width="100" height="97.5"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="100" id="J2J-fv-kHN"/>
@@ -2404,7 +2404,7 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="B98-DF-ffV"/>
-        <segue reference="q1M-HB-wPM"/>
+        <segue reference="qGV-n2-CNY"/>
         <segue reference="3zH-gj-nru"/>
         <segue reference="2Qn-92-HxQ"/>
         <segue reference="6ei-Hb-nWL"/>
@@ -2421,7 +2421,7 @@
         <image name="person.circle" catalog="system" width="128" height="121"/>
         <image name="person.circle.fill" catalog="system" width="128" height="121"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
-        <image name="photo.artframe" catalog="system" width="128" height="93"/>
+        <image name="photo" catalog="system" width="128" height="93"/>
         <image name="plus.circle.fill" catalog="system" width="128" height="121"/>
         <image name="plus.message" catalog="system" width="128" height="113"/>
         <image name="showapp.tn" width="1298" height="257"/>
